--- a/styles.css
+++ b/styles.css
@@ -1,10 +1,18 @@
+body{
+    font-family: "Inter", sans-serif;
+}
+
 .social-link{
 background-color: hsl(0, 0%, 20%);
 margin: 0.5rem 0;
 padding:0.7rem 0;
 width: 100%;
 border-radius: 0.375rem;
-color: white;
+}
+
+a.social-link:active, a.social-link:hover{   
+    background-color: hsl(75, 94%, 57%);
+    color: white;
 }
 
 img{
@@ -15,4 +23,9 @@ img{
 .link{
     color: white;
     font-weight: 600;
+}
+
+.link:hover, .link:active{
+    color: black;
+    
 }
