--- a/src/output.css
+++ b/src/output.css
@@ -599,6 +599,11 @@ video {
   margin-bottom: 1.25rem;
 }
 
+.mx-8 {
+  margin-left: 2rem;
+  margin-right: 2rem;
+}
+
 .ml-3 {
   margin-left: 0.75rem;
 }
